--- a/bc/index.html
+++ b/bc/index.html
@@ -310,47 +310,183 @@
 
             <!-- May Section -->
             <div id="may" class="content-section active">
-                <h1>May 2025 Boot Camp</h1>
-                <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
-                <ul>
-                    <li>Programming 1: Interactive lessons for both beginners and advanced students.</li>
-                    <li>Networking Opportunities: Connect with alumni and professionals in the IT field.</li>
-                    <li>Professional Development: Participate in resume-building sessions and mock interviews.</li>
-                </ul>
-                <h2>Tentative Schedule</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Day</th>
-                            <th>Time</th>
-                            <th>Activity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Wednesday</td>
-                            <td>9:00 AM</td>
-                            <td>Guest Speaker Session</td>
-                        </tr>
-                        <tr>
-                            <td>Thursday</td>
-                            <td>10:00 AM</td>
-                            <td>Advanced Programming Concepts</td>
-                        </tr>
-                        <tr>
-                            <td>Friday</td>
-                            <td>2:00 PM</td>
-                            <td>Closing Ceremony</td>
-                        </tr>
-                    </tbody>
-                </table>
                 <div class="center">
-                    <a class="button" href="https://example.com/may-registration" target="_blank">Register for May Boot Camp</a>
+                <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">
+                    <i class="fa fa-pencil"></i> Application/Registration
+                </a>
+            </div>
+
+            <!-- Cover   -->
+            <div class="cover">
+                <div class="overlay"></div>
+                 <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/cover052025.PNG?raw=true" alt="Cover Image" class="cover-image" />
+                <div class="cover-text">
+                    <p><strong>Programming Boot Camp 2025</strong></p>
+                   
                 </div>
             </div>
-        </div>
-    </div>
+            <br>
 
+            <p>Programming Boot Camp will be held in-person from - 
+              Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
+
+            <p><strong>The purpose of this boot camp is to:</strong></p>
+            <ul>
+                <li><strong>Prepare Students for Success in Programming Courses:</strong> Equip students with the foundational skills and confidence needed to excel in programming courses.</li>
+                <li><strong>Support Group for Programming Students:</strong> Designed for students with prior exposure to any programming language who are seeking a refresher to prepare for advanced IT classes.</li>
+                <li><strong>Build a Strong IT Community:</strong> Foster a supportive environment where students can connect with peers, student mentors, and IT faculty to collaborate and grow together.</li>
+                <li><strong>Offer Professional Development Opportunities:</strong> Provide enriching experiences such as guest speaker sessions, off-campus field trips, and networking opportunities to enhance career readiness.</li>
+            </ul>
+
+            <!-- Schedule table -->
+             <h2 class="center">Tentative Schedule of May Boot Camp 2025</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Activity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Wednesday, May 7, 2025</td>
+                        <td>8:30 – 9 a.m.</td>
+                        <td>Breakfast (TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9 – 9:30 a.m.</td>
+                        <td>Pre-Test (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9:30 – 11:15 a.m.</td>
+                        <td>Programming 1 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:30 a.m. – 12:30 p.m.</td>
+                        <td>GUEST SPEAKER(S)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>12:30 – 1:00 p.m.</td>
+                        <td>Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 – 2:30 p.m.</td>
+                        <td>Programming 2 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>2:45 – 3:45 p.m.</td>
+                        <td>GUEST SPEAKER(S)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>4:00 – 5:00 p.m.</td>
+                        <td>Ice-cream social + round table mentoring (TBA)</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday, May 8, 2025</td>
+                        <td>8:30 – 9 a.m.</td>
+                        <td>Breakfast (TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9 – 10:15 a.m.</td>
+                        <td>Programming 3 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>10:30 – 11:45 a.m.</td>
+                        <td>Programming 4 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:45 a.m. – 1 p.m.</td>
+                        <td>Guest Speakers and Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 – 2:30 p.m.</td>
+                        <td>Programming 5 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>2:45 – 3:45 p.m.</td>
+                        <td>Student Panel (TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>4:00 – 5:00 p.m.</td>
+                        <td>Programming 6 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td>Friday, May 9, 2025</td>
+                        <td>8:30 – 9 a.m.</td>
+                        <td>Breakfast (TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>9 – 11:00 a.m.</td>
+                        <td>Programming 7 (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>11:00 a.m. – 12:30 p.m.</td>
+                        <td>Special Topic: Database</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>12:30 – 1:10 p.m.</td>
+                        <td>Lunch</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>1:15 – 2:15 p.m.</td>
+                        <td>Post-Test and Post Survey (newbies: TBA, intermediate: TBA)</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>2:30 – 3:30 p.m.</td>
+                        <td>Keynote Speaker: Julie Talbot Hubbard, President, Services and Chief Operating Officer, Cyderes</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>3:30 – 4:30 p.m.</td>
+                        <td>Alumni Visitation and Closing Ceremony</td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+    <p>Registration for non-GGC students includes a $25 fee. Fee waivers may be available for eligible non-GGC students based on academic merit (GPA of 3.3 or higher).</p>
+
+    
+
+            <div class="center">
+                <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">
+                    <i class="fa fa-pencil"></i> Application/Registration
+                </a>
+            </div>
+
+            <h3 class="center">Thanks To Our Supporters</h3>
+
+            <br>
+            <div class="center">
+                    <a href="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" target="_blank">
+                        <img src="https://github.com/hpark7/hpark7.github.io/blob/master/bc/images/Google_Logo.png?raw=true" alt="Google Logo" class="logo">
+                    </a>
+            </div>
+            <div>
+                    <p>Note: Expansion of the bootcamp program has been generously supported by a two-year grant from Google LLC.</p>
+
+            </div>
+        </div>
+            </div>
     <script>
         function showSection(sectionId) {
             const sections = document.querySelectorAll('.content-section');
