--- a/bc/index.html
+++ b/bc/index.html
@@ -182,6 +182,16 @@
                             <td>11:00 AM</td>
                             <td>Java Basics</td>
                         </tr>
+                        <tr>
+                            <td>Saturday</td>
+                            <td>9:00 AM</td>
+                            <td>Advanced Topics in Java</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>2:00 PM</td>
+                            <td>Post-Test & Certificates</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -213,6 +223,11 @@
                             <td></td>
                             <td>11:00 AM</td>
                             <td>Programming Labs</td>
+                        </tr>
+                        <tr>
+                            <td>Friday</td>
+                            <td>3:00 PM</td>
+                            <td>Closing Ceremony</td>
                         </tr>
                     </tbody>
                 </table>
