--- a/bc/index.html
+++ b/bc/index.html
@@ -158,11 +158,11 @@
                 <h1>January 2025 Boot Camp</h1>
                 <p>Programming Boot Camp will be held in-person from Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
                 <ul>
-                    <li>Prepare students to succeed in Java Programming courses.</li>
-                    <li>Form a community of support with peers, mentors, and faculty.</li>
-                    <li>Provide professional development through guest speakers and field trips.</li>
+                    <li><strong>Purpose:</strong> Prepare students to succeed in Java Programming courses.</li>
+                    <li><strong>Community Support:</strong> Connect students with peers, mentors, and faculty.</li>
+                    <li><strong>Professional Development:</strong> Guest speakers and off-campus field trips.</li>
                 </ul>
-                <h2>Tentative Schedule</h2>
+                <h2>Schedule</h2>
                 <table>
                     <thead>
                         <tr>
@@ -174,37 +174,51 @@
                     <tbody>
                         <tr>
                             <td>Friday</td>
+                            <td>8:30 AM</td>
+                            <td>Breakfast</td>
+                        </tr>
+                        <tr>
+                            <td></td>
                             <td>9:00 AM</td>
-                            <td>Introduction & Pre-Test</td>
+                            <td>Pre-Test</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>11:00 AM</td>
-                            <td>Java Basics</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday</td>
-                            <td>9:00 AM</td>
-                            <td>Advanced Topics in Java</td>
+                            <td>Java Basics Workshop</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>2:00 PM</td>
-                            <td>Post-Test & Certificates</td>
+                            <td>Lunch</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday</td>
+                            <td>9:00 AM</td>
+                            <td>Advanced Java Programming</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>3:00 PM</td>
+                            <td>Post-Test and Certificates</td>
                         </tr>
                     </tbody>
                 </table>
+                <div class="center">
+                    <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">Application/Registration (Closed)</a>
+                </div>
             </div>
 
             <!-- May Section -->
             <div id="may" class="content-section">
                 <h1>May 2025 Boot Camp</h1>
-                <p>Boot Camp will be held from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
+                <p>Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
                 <ul>
-                    <li>Focus on advanced programming skills for IT courses.</li>
+                    <li>Advanced programming skills for IT courses.</li>
                     <li>Networking opportunities with peers and industry professionals.</li>
+                    <li>Hands-on programming workshops.</li>
                 </ul>
-                <h2>Tentative Schedule</h2>
+                <h2>Schedule</h2>
                 <table>
                     <thead>
                         <tr>
@@ -216,6 +230,11 @@
                     <tbody>
                         <tr>
                             <td>Wednesday</td>
+                            <td>8:30 AM</td>
+                            <td>Breakfast</td>
+                        </tr>
+                        <tr>
+                            <td></td>
                             <td>9:00 AM</td>
                             <td>Welcome & Keynote</td>
                         </tr>
@@ -226,11 +245,14 @@
                         </tr>
                         <tr>
                             <td>Friday</td>
-                            <td>3:00 PM</td>
+                            <td>2:30 PM</td>
                             <td>Closing Ceremony</td>
                         </tr>
                     </tbody>
                 </table>
+                <div class="center">
+                    <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Application/Registration</a>
+                </div>
             </div>
         </div>
     </div>
