--- a/bc/index.html
+++ b/bc/index.html
@@ -210,15 +210,22 @@
             </div>
 
             <!-- May Section -->
-            <div id="may" class="content-section">
+            <div id="may" class="content-section active">
                 <h1>May 2025 Boot Camp</h1>
-                <p>Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
+                <div class="center">
+                    <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">
+                        <i class="fa fa-pencil"></i> Application/Registration
+                    </a>
+                </div>
+                <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
+                <p><strong>The purpose of this boot camp is to:</strong></p>
                 <ul>
-                    <li>Advanced programming skills for IT courses.</li>
-                    <li>Networking opportunities with peers and industry professionals.</li>
-                    <li>Hands-on programming workshops.</li>
+                    <li><strong>Prepare Students for Success in Programming Courses:</strong> Equip students with foundational skills to excel.</li>
+                    <li><strong>Build a Strong IT Community:</strong> Foster connections between students, mentors, and faculty.</li>
+                    <li><strong>Offer Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
                 </ul>
-                <h2>Schedule</h2>
+
+                <h2 class="center">Tentative Schedule of May Boot Camp 2025</h2>
                 <table>
                     <thead>
                         <tr>
@@ -230,28 +237,43 @@
                     <tbody>
                         <tr>
                             <td>Wednesday</td>
-                            <td>8:30 AM</td>
+                            <td>8:30 – 9:00 AM</td>
                             <td>Breakfast</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td>9:00 AM</td>
-                            <td>Welcome & Keynote</td>
+                            <td>9:00 – 9:30 AM</td>
+                            <td>Pre-Test</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td>11:00 AM</td>
-                            <td>Programming Labs</td>
+                            <td>9:30 – 11:15 AM</td>
+                            <td>Programming Session 1</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>11:30 AM – 12:30 PM</td>
+                            <td>Guest Speaker</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>12:30 – 1:00 PM</td>
+                            <td>Lunch</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>2:30 – 3:30 PM</td>
+                            <td>Networking Activities</td>
                         </tr>
                         <tr>
                             <td>Friday</td>
-                            <td>2:30 PM</td>
-                            <td>Closing Ceremony</td>
+                            <td>3:00 – 5:00 PM</td>
+                            <td>Closing Session & Certificates</td>
                         </tr>
                     </tbody>
                 </table>
                 <div class="center">
-                    <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Application/Registration</a>
+                    <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
                 </div>
             </div>
         </div>
