--- a/bc/index.html
+++ b/bc/index.html
@@ -209,75 +209,148 @@
                 </div>
             </div>
 
-            <!-- May Section -->
-            <div id="may" class="content-section active">
-                <h1>May 2025 Boot Camp</h1>
-                <div class="center">
-                    <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">
-                        <i class="fa fa-pencil"></i> Application/Registration
-                    </a>
-                </div>
-                <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
-                <p><strong>The purpose of this boot camp is to:</strong></p>
-                <ul>
-                    <li><strong>Prepare Students for Success in Programming Courses:</strong> Equip students with foundational skills to excel.</li>
-                    <li><strong>Build a Strong IT Community:</strong> Foster connections between students, mentors, and faculty.</li>
-                    <li><strong>Offer Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
-                </ul>
-
-                <h2 class="center">Tentative Schedule of May Boot Camp 2025</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Day</th>
-                            <th>Time</th>
-                            <th>Activity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Wednesday</td>
-                            <td>8:30 – 9:00 AM</td>
-                            <td>Breakfast</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>9:00 – 9:30 AM</td>
-                            <td>Pre-Test</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>9:30 – 11:15 AM</td>
-                            <td>Programming Session 1</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>11:30 AM – 12:30 PM</td>
-                            <td>Guest Speaker</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>12:30 – 1:00 PM</td>
-                            <td>Lunch</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>2:30 – 3:30 PM</td>
-                            <td>Networking Activities</td>
-                        </tr>
-                        <tr>
-                            <td>Friday</td>
-                            <td>3:00 – 5:00 PM</td>
-                            <td>Closing Session & Certificates</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="center">
-                    <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
-                </div>
-            </div>
-        </div>
+           <!-- May Section -->
+<div id="may" class="content-section">
+    <h1>May 2025 Boot Camp</h1>
+    <div class="center">
+        <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">
+            <i class="fa fa-pencil"></i> Application/Registration
+        </a>
     </div>
+    <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
+    <p><strong>The purpose of this boot camp is to:</strong></p>
+    <ul>
+        <li><strong>Prepare Students for Success in Programming Courses:</strong> Equip students with foundational skills to excel.</li>
+        <li><strong>Build a Strong IT Community:</strong> Foster connections between students, mentors, and faculty.</li>
+        <li><strong>Offer Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
+    </ul>
+
+    <h2 class="center">Tentative Schedule of May Boot Camp 2025</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Activity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Wednesday, May 7, 2025</td>
+                <td>8:30 – 9 a.m.</td>
+                <td>Breakfast (TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9 – 9:30 a.m.</td>
+                <td>Pre-Test (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9:30 – 11:15 a.m.</td>
+                <td>Programming 1 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>11:30 a.m. – 12:30 p.m.</td>
+                <td>GUEST SPEAKER(S)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>12:30 – 1:00 p.m.</td>
+                <td>Lunch</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>1:15 – 2:30 p.m.</td>
+                <td>Programming 2 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>2:45 – 3:45 p.m.</td>
+                <td>GUEST SPEAKER(S)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>4:00 – 5:00 p.m.</td>
+                <td>Ice-cream social + round table mentoring (TBA)</td>
+            </tr>
+            <tr>
+                <td>Thursday, May 8, 2025</td>
+                <td>8:30 – 9 a.m.</td>
+                <td>Breakfast (TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9 – 10:15 a.m.</td>
+                <td>Programming 3 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>10:30 – 11:45 a.m.</td>
+                <td>Programming 4 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>11:45 a.m. – 1 p.m.</td>
+                <td>Guest Speakers and Lunch</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>1:15 – 2:30 p.m.</td>
+                <td>Programming 5 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>2:45 – 3:45 p.m.</td>
+                <td>Student Panel (TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>4:00 – 5:00 p.m.</td>
+                <td>Programming 6 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td>Friday, May 9, 2025</td>
+                <td>8:30 – 9 a.m.</td>
+                <td>Breakfast (TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9 – 11:00 a.m.</td>
+                <td>Programming 7 (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>11:00 a.m. – 12:30 p.m.</td>
+                <td>Special Topic: Database</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>12:30 – 1:10 p.m.</td>
+                <td>Lunch</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>1:15 – 2:15 p.m.</td>
+                <td>Post-Test and Post Survey (newbies: TBA, intermediate: TBA)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>2:30 – 3:30 p.m.</td>
+                <td>Keynote Speaker: Julie Talbot Hubbard, President, Services and Chief Operating Officer, Cyderes</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>3:30 – 4:30 p.m.</td>
+                <td>Alumni Visitation and Closing Ceremony</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="center">
+        <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
+    </div>
+</div>
 
     <script>
         function showSection(sectionId) {
