--- a/bc/index.html
+++ b/bc/index.html
@@ -153,61 +153,114 @@
 
         <!-- Main Content Section -->
         <div class="main-content">
-            <!-- January Section -->
-            <div id="january" class="content-section active">
-                <h1>January 2025 Boot Camp</h1>
-                <p>Programming Boot Camp will be held in-person from Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
-                <ul>
-                    <li><strong>Purpose:</strong> Prepare students to succeed in Java Programming courses.</li>
-                    <li><strong>Community Support:</strong> Connect students with peers, mentors, and faculty.</li>
-                    <li><strong>Professional Development:</strong> Guest speakers and off-campus field trips.</li>
-                </ul>
-                <h2>Schedule</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Day</th>
-                            <th>Time</th>
-                            <th>Activity</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Friday</td>
-                            <td>8:30 AM</td>
-                            <td>Breakfast</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>9:00 AM</td>
-                            <td>Pre-Test</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>11:00 AM</td>
-                            <td>Java Basics Workshop</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>2:00 PM</td>
-                            <td>Lunch</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday</td>
-                            <td>9:00 AM</td>
-                            <td>Advanced Java Programming</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>3:00 PM</td>
-                            <td>Post-Test and Certificates</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="center">
-                    <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">Application/Registration (Closed)</a>
-                </div>
-            </div>
+<div id="january" class="content-section active">
+    <h1>January 2025 Boot Camp</h1>
+    <p>Programming Boot Camp will be held in-person from Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
+
+    <div class="center">
+        <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
+            <i class="fa fa-pencil"></i> Application/Registration-Closed
+        </a>
+    </div>
+
+    <p>Registration for non-GGC students includes a $25 fee. Fee waivers may be available for eligible non-GGC students based on academic merit (GPA of 3.3 or higher).</p>
+
+    <h2>Purpose</h2>
+    <ul>
+        <li>Prepare students to succeed in Java Programming courses.</li>
+        <li>Designed for students who have been exposed to Java and want a refresher to prepare for other IT classes.</li>
+        <li>Enable students in IT to form a community of support with peers, student mentors, and IT faculty.</li>
+        <li>Provide professional development opportunities such as guest speakers and off-campus field trips.</li>
+    </ul>
+
+    <h2 class="center">Tentative Schedule of January Boot Camp 2025</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Activity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Friday, January 3, 2025</td>
+                <td>8:30 - 9:00 AM</td>
+                <td>Breakfast (A1940)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9:00 - 9:30 AM</td>
+                <td>Pre-Test (A1900/A1910/A1930)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9:30 - 11:30 AM</td>
+                <td>Programming 1 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>11:45 AM - 12:15 PM</td>
+                <td>Danielle (Davis) Battle, Ameris Bank - Guest Speaker (A1940)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>12:15 - 1:15 PM</td>
+                <td>Lunch with Dr. Joseph Ametepe, Dean of School of Science and Technology</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>1:30 - 4:00 PM</td>
+                <td>Programming 2 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>4:15 - 5:00 PM</td>
+                <td>Special Topic - Mini Session (A1940)</td>
+            </tr>
+            <tr>
+                <td>Saturday, January 4, 2025</td>
+                <td>8:30 - 9:00 AM</td>
+                <td>Breakfast (A1940)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>9:00 - 11:30 AM</td>
+                <td>Programming 3 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>11:35 AM - 1:00 PM</td>
+                <td>Guest Speakers and Lunch: Dr. Sean Yang, Chair of Information Technology</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>1:15 - 3:30 PM</td>
+                <td>Programming 4 (A1900/A1910/A1930) - Dr. Sebastien Siva</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>3:30 - 4:15 PM</td>
+                <td>Post-Test and Post Survey (A1940)</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>4:30 - 5:00 PM</td>
+                <td>Closing Session with Certificate Presentation (A1940)</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="center">
+        <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
+            <i class="fa fa-pencil"></i> Application/Registration-Closed
+        </a>
+    </div>
+</div>
+
+
+
+            
 
            <!-- May Section -->
 <div id="may" class="content-section">
