--- a/bc/index.html
+++ b/bc/index.html
@@ -403,6 +403,14 @@
     <div class="center">
         <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
     </div>
+
+
+    <div class="center">
+      
+                <a href="https://www.google.com/" target="_blank">
+                      <img src="/bc/images/Google_Logo.PNG?w=954" alt="Google Logo"class="small-logo" />
+                 </a>
+     </div>
 </div>
 
     <script>
