--- a/bc/index.html
+++ b/bc/index.html
@@ -408,7 +408,7 @@
     <div class="center">
       
                 <a href="https://www.google.com/" target="_blank">
-                      <img src="/bc/images/Google_Logo.PNG?w=954" alt="Google Logo"class="small-logo" />
+                      <img src="/bc/images/Google_Logo.png?w=954" alt="Google Logo"class="small-logo" />
                  </a>
      </div>
 </div>
