--- a/bc/index.html
+++ b/bc/index.html
@@ -262,7 +262,7 @@
 
             
 
-           <!-- May Section -->
+<!-- May Section -->
 <div id="may" class="content-section">
     <h1>May 2025 Boot Camp</h1>
     <div class="center">
@@ -273,9 +273,10 @@
     <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
     <p><strong>The purpose of this boot camp is to:</strong></p>
     <ul>
-        <li><strong>Prepare Students for Success in Programming Courses:</strong> Equip students with foundational skills to excel.</li>
-        <li><strong>Build a Strong IT Community:</strong> Foster connections between students, mentors, and faculty.</li>
-        <li><strong>Offer Professional Development:</strong> Guest speakers, field trips, and networking opportunities.</li>
+        <li><strong>Prepare Students for Success in Programming Courses</strong></li>
+        <li><strong>Group for students who have been exposed to Java and want a refresher to prepare for other IT classes</strong> Foster connections between students, mentors, and faculty.</li>
+        <li><strong>Enable students in IT to form a community of support with peers, student mentors, and IT faculty</strong> </li>
+        <li><strong>Provide professional development opportunities such as guest speakers and off-campus field trips</strong> </li>
     </ul>
 
     <h2 class="center">Tentative Schedule of May Boot Camp 2025</h2>
