--- a/bc/index.html
+++ b/bc/index.html
@@ -404,12 +404,12 @@
     <div class="center">
         <a class="button" href="https://tinyurl.com/5at4ps7d" target="_blank">Register Here</a>
     </div>
-
+    <div><p>Thanks To Our Supporters </p> <div>
 
     <div class="center">
       
                 <a href="https://www.google.com/" target="_blank">
-                      <img src="/bc/images/Google_Logo.png?w=954" alt="Google Logo"class="small-logo" />
+                      <img src="/bc/images/Google_Logo.png?w=150" alt="Google Logo"class="small-logo" />
                  </a>
      </div>
 </div>
