--- a/bc/index.html
+++ b/bc/index.html
@@ -131,6 +131,25 @@
             padding: 12px;
             text-align: left;
         }
+
+        /* Centering elements */
+    .center {
+        text-align: center;
+    }
+
+    /* Smaller Google Logo */
+    .small-logo {
+        width: 50%; /* Reduce to half its original size */
+        height: auto;
+    }
+
+ .supporter-text {
+        font-size: 1.5rem; /* Makes the text larger */
+        color: #004d99; /* Blue color */
+        font-weight: bold; /* Optional: Makes the text bold */
+        text-align: center; /* Centers the text */
+        margin-bottom: 20px; /* Adds space below the text */
+    }
     </style>
 </head>
 <body>
@@ -256,6 +275,13 @@
             <i class="fa fa-pencil"></i> Application/Registration-Closed
         </a>
     </div>
+
+      <div class="center">
+            <p class="supporter-text">Thanks To Our Supporters</p>
+            <a href="https://www.google.com/" target="_blank">
+                <img src="/bc/images/Google_Logo.png" alt="Google Logo" class="small-logo" />
+            </a>
+      </div>
 </div>
 
 
@@ -406,12 +432,12 @@
     </div>
     <div><p>Thanks To Our Supporters </p> <div>
 
-    <div class="center">
-      
-                <a href="https://www.google.com/" target="_blank">
-                      <img src="/bc/images/Google_Logo.png?w=150" alt="Google Logo"class="small-logo" />
-                 </a>
-     </div>
+        <div class="center">
+            <p class="supporter-text">Thanks To Our Supporters</p>
+            <a href="https://www.google.com/" target="_blank">
+                <img src="/bc/images/Google_Logo.png" alt="Google Logo" class="small-logo" />
+            </a>
+      </div>
 </div>
 
     <script>
