--- a/bc/index.html
+++ b/bc/index.html
@@ -300,7 +300,7 @@
     <p><strong>The purpose of this boot camp is to:</strong></p>
     <ul>
         <li><strong>Prepare Students for Success in Programming Courses</strong></li>
-        <li><strong>Group for students who have been exposed to Java and want a refresher to prepare for other IT classes</strong> Foster connections between students, mentors, and faculty.</li>
+        <li><strong>Group for students who have been exposed to Java and want a refresher to prepare for other IT classes</strong></li>
         <li><strong>Enable students in IT to form a community of support with peers, student mentors, and IT faculty</strong> </li>
         <li><strong>Provide professional development opportunities such as guest speakers and off-campus field trips</strong> </li>
     </ul>
