--- a/bc/index.html
+++ b/bc/index.html
@@ -158,7 +158,7 @@
         <img src="/bc/images/SchoolOfScienceAndTechnology-Vert.jpg" alt="GGC Logo"> 
         <div>
             <h1>Boot Camp 2025</h1>
-            <div class="date">Explore January and May Boot Camps</div>
+            <div class="date">Brought to you by Women in Technology at GGC</div>
         </div>
     </div>
 
