--- a/bc/index.html
+++ b/bc/index.html
@@ -175,7 +175,9 @@
 <div id="january" class="content-section active">
     <h1>January 2025 Boot Camp</h1>
     <p>Programming Boot Camp will be held in-person from Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
-    <img src="cover052025.PNG" alt="Boot Camp Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
+  
+    
+    <img src="/bc/images/cover052025.PNG" alt="Boot Camp Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
     <div class="center">
         <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
             <i class="fa fa-pencil"></i> Application/Registration-Closed
