--- a/bc/index.html
+++ b/bc/index.html
@@ -177,7 +177,7 @@
     <p>Programming Boot Camp will be held in-person from Friday, January 3, 2025 - Saturday, January 4, 2025.</p>
   
     
-    <img src="/bc/images/cover052025.png" alt="Boot Camp Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
+    <img src="/bc/images/Cover.png" alt="Boot Camp - Jan Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
     <div class="center">
         <a class="button" href="https://forms.gle/8YHaB5Diz5PL7Q1j7" target="_blank">
             <i class="fa fa-pencil"></i> Application/Registration-Closed
@@ -299,6 +299,9 @@
         </a>
     </div>
     <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
+  
+      <img src="/bc/images/cover052025.png" alt="Boot Camp Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
+    
     <p><strong>The purpose of this boot camp is to:</strong></p>
     <ul>
         <li><strong>Prepare Students for Success in Programming Courses</strong></li>
