--- a/bc/index.html
+++ b/bc/index.html
@@ -305,7 +305,7 @@
     </div>
     <p>Programming Boot Camp will be held in-person from Wednesday, May 7, 2025 - Friday, May 9, 2025.</p>
     
-      <img src="/bc/images/cover052025.png" alt="Boot Camp Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
+      <img src="/bc/images/cover052025.PNG" alt="Boot Camp Cover Image" style="display: block; margin: 20px auto; max-width: 100%; height: auto;">
     
     <p><strong>The purpose of this boot camp is to:</strong></p>
     <ul>
