--- a/bc/index.html
+++ b/bc/index.html
@@ -84,7 +84,7 @@
             overflow-y: auto;
         }
         img {
-            display: none; /* Remove this if present */
+            display: block; 
         }
 
 
