--- a/bc/index.html
+++ b/bc/index.html
@@ -145,8 +145,10 @@
 
     /* Smaller Google Logo */
     .small-logo {
-        width: 25%; /* Reduce to half its original size */
+        width: 25%; /* Reduce down to 25% */
         height: auto;
+        display: block;
+        margin: 0 auto; /* center alignment */
     }
 
  .supporter-text {
