--- a/bc/index.html
+++ b/bc/index.html
@@ -174,8 +174,8 @@
         <!-- Table of Contents -->
         <div class="toc">
             <h2>Table of Contents</h2>
-            <a href="#" onclick="showSection('may')">May 2025 Boot Camp</a>
-            <a href="#" onclick="showSection('january')">January 2025 Boot Camp</a>  
+            <a href="#may" onclick="showSection('may')">May 2025 Boot Camp</a>
+            <a href="#january" onclick="showSection('january')">January 2025 Boot Camp</a>  
         </div>
 
         <!-- Main Content Section -->
