--- a/bc/index.html
+++ b/bc/index.html
@@ -203,7 +203,7 @@
         <li>Provide professional development opportunities such as guest speakers and off-campus field trips.</li>
     </ul>
 
-    <h2 class="center">Tentative Schedule of January Boot Camp 2025</h2>
+    <h2 class="center">Schedule of January Boot Camp 2025</h2>
     <table>
         <thead>
             <tr>
