--- a/bc/index.html
+++ b/bc/index.html
@@ -321,6 +321,7 @@
     </ul>
 
     <h2 class="center">Tentative Schedule of May Boot Camp 2025</h2>
+    <h3 class="center">Location: A 1940,1900,1910,1930</h3>
     <table>
         <thead>
             <tr>
@@ -333,7 +334,7 @@
             <tr>
                 <td>Wednesday, May 7, 2025</td>
                 <td>8:30 – 9 a.m.</td>
-                <td>Breakfast (TBA)</td>
+                <td>Breakfast (A1940)</td>
             </tr>
             <tr>
                 <td></td>
@@ -373,7 +374,7 @@
             <tr>
                 <td>Thursday, May 8, 2025</td>
                 <td>8:30 – 9 a.m.</td>
-                <td>Breakfast (TBA)</td>
+                <td>Breakfast (A1940)</td>
             </tr>
             <tr>
                 <td></td>
@@ -408,7 +409,7 @@
             <tr>
                 <td>Friday, May 9, 2025</td>
                 <td>8:30 – 9 a.m.</td>
-                <td>Breakfast (TBA)</td>
+                <td>Breakfast (A1940)</td>
             </tr>
             <tr>
                 <td></td>
