--- a/bc/index.html
+++ b/bc/index.html
@@ -378,34 +378,20 @@
             </tr>
             <tr>
                 <td></td>
-                <td>9 – 10:15 a.m.</td>
-                <td>Programming 3 (newbies: TBA, intermediate: TBA)</td>
+                <td>9 – 11:15 a.m.</td>
+                <td>Programming 3 & 4 (newbies: TBA, intermediate: TBA)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>10:30 – 11:45 a.m.</td>
-                <td>Programming 4 (newbies: TBA, intermediate: TBA)</td>
+                <td>11:15 a.m – 12:00 noon</td>
+                <td>Lunch (A1940)</td>
             </tr>
             <tr>
                 <td></td>
-                <td>11:45 a.m. – 1 p.m.</td>
-                <td>Guest Speakers and Lunch</td>
+                <td>12:00 p.m - 5:00 p.m.</td>
+                <td>FIELD TRIP</td>
             </tr>
-            <tr>
-                <td></td>
-                <td>1:15 – 2:30 p.m.</td>
-                <td>Programming 5 (newbies: TBA, intermediate: TBA)</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>2:45 – 3:45 p.m.</td>
-                <td>Student Panel (TBA)</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>4:00 – 5:00 p.m.</td>
-                <td>Programming 6 (newbies: TBA, intermediate: TBA)</td>
-            </tr>
+             
             <tr>
                 <td>Friday, May 9, 2025</td>
                 <td>8:30 – 9 a.m.</td>
