--- a/bc/index.html
+++ b/bc/index.html
@@ -389,7 +389,7 @@
             <tr>
                 <td></td>
                 <td>12:00 p.m - 5:00 p.m.</td>
-                <td>FIELD TRIP</td>
+                <td>Invited Speaker - Jessic Mitchell, Google and Field Trip</td>
             </tr>
              
             <tr>
