--- a/bc/index.html
+++ b/bc/index.html
@@ -434,7 +434,7 @@
     </div>
 
         <div class="center">
-            <p class="supporter-text">Thanks To Our Supporters</p>
+            <p class="supporter-text">Thanks To Our Supporter</p>
             <a href="https://www.google.com/" target="_blank">
                 <img src="/bc/images/Google_Logo.png" alt="Google Logo" class="small-logo" />
             </a>
