--- a/bc/index.html
+++ b/bc/index.html
@@ -339,17 +339,17 @@
             <tr>
                 <td></td>
                 <td>9 – 9:30 a.m.</td>
-                <td>Pre-Test (newbies: TBA, intermediate: TBA)</td>
+                <td>Pre-Test (newbies and intermediate classes: Dr. Sebastien Siva and Dr. Tacksoo Im)</td>
             </tr>
             <tr>
                 <td></td>
                 <td>9:30 – 11:15 a.m.</td>
-                <td>Programming 1 (newbies: TBA, intermediate: TBA)</td>
+                <td>Programming 1 (newbies and intermediate classes: Dr. Sebastien Siva and Dr. Tacksoo Im)</td>
             </tr>
             <tr>
                 <td></td>
                 <td>11:30 a.m. – 12:30 p.m.</td>
-                <td>GUEST SPEAKER(S)</td>
+                <td>A Welcome from Dr. Chavonda Mills, Provost</td>
             </tr>
             <tr>
                 <td></td>
@@ -359,7 +359,7 @@
             <tr>
                 <td></td>
                 <td>1:15 – 2:30 p.m.</td>
-                <td>Programming 2 (newbies: TBA, intermediate: TBA)</td>
+                <td>Programming 2 (newbies and intermediate classes: Dr. Sebastien Siva and Dr. Tacksoo Im)</td>
             </tr>
             <tr>
                 <td></td>
@@ -379,7 +379,7 @@
             <tr>
                 <td></td>
                 <td>9 – 11:15 a.m.</td>
-                <td>Programming 3 & 4 (newbies: TBA, intermediate: TBA)</td>
+                <td>Programming 3 & 4 (newbies and intermediate classes: Dr. Sebastien Siva and Dr. Tacksoo Im)</td>
             </tr>
             <tr>
                 <td></td>
@@ -400,7 +400,7 @@
             <tr>
                 <td></td>
                 <td>9 – 11:00 a.m.</td>
-                <td>Programming 7 (newbies: TBA, intermediate: TBA)</td>
+                <td>Programming 7 (newbies and intermediate classes: Dr. Sebastien Siva and Dr. Tacksoo Im)</td>
             </tr>
             <tr>
                 <td></td>
@@ -415,7 +415,7 @@
             <tr>
                 <td></td>
                 <td>1:15 – 2:15 p.m.</td>
-                <td>Post-Test and Post Survey (newbies: TBA, intermediate: TBA)</td>
+                <td>Post-Test and Post Survey (newbies and intermediate classes: Dr. Sebastien Siva and Dr. Tacksoo Im)</td>
             </tr>
             <tr>
                 <td></td>
