--- a/hm/index.html
+++ b/hm/index.html
@@ -56,7 +56,7 @@
 <body>
   <div class="container">
     <h1>Hyesung Park</h1>
-    <p style="text-align: center;">Associate Professor, Department of Information Technology, Georgia Gwinnett College</p>
+    <p style="text-align: center;">Associate Professor, Georgia Gwinnett College</p>
 
     <div class="links">
       <a href="https://www.linkedin.com/in/hyesungpark/" target="_blank">LinkedIn</a>
@@ -73,8 +73,8 @@
     <h2>Courses I Teach</h2>
     <ul>
       <li>Advanced Programming - Algorithm(ITEC 3150)</li>
-        <li>Intermediate Programming - OOP and Data Structure(ITEC 3150)</li>
-        <li>Programming Fundamental (ITEC 3150)</li>
+        <li>Intermediate Programming - OOP and Data Structure(ITEC 2150)</li>
+        <li>Programming Fundamental (ITEC 2140)</li>
       
        
     </ul>
